--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-<!DOCTYPE>
-
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="des">
-    <title>This is my title</title>
-</head>
-<body>
-    <h1>This is my big title</h1>
-    <h6>This is me small title</h6>
-</body>
-
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>chats | Kakao Clone</title>
+    <script
+      src="https://kit.fontawesome.com/7a2d37306e.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span class="status-bar__clock">13:54</span>
+      </div>
+      <div class="status-bar__column">
+        <i class="fas fa-clock"></i>
+        <i class="fas fa-volume-mute"></i>
+        <i class="fas fa-wifi"></i>
+        <span class="status-bar__battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
+      </div>
+    </div>
+  </body>
 </html>
