--- a/index.html
+++ b/index.html
@@ -23,5 +23,63 @@
         <i class="fas fa-battery-full"></i>
       </div>
     </div>
+    <header class="header">
+      <div class="header__header-column">
+        <h1 class="header__title">Chats</h1>
+      </div>
+      <div class="header__header-column">
+        <span class="header__icon">
+          <i class="fas fa-search"></i>
+        </span>
+        <span class="header__icon">
+          <i class="far fa-comment"></i>
+        </span>
+        <span class="header__icon">
+          <i class="fas fa-cog"></i>
+        </span>
+      </div>
+    </header>
+    <main class="chats">
+         <ui class="chats__list">
+              <li class="chats__chat__chat">
+                  <div class="chat__column"></div>
+                  <img class="chat__avatar" src="images/me.jpg" />
+                  <chat class="contant">
+                      <span class="chat__username">
+                          kim
+                      </sapn>
+                      <span class="chat__preview">goingHime</span>
+                  </chat>
+                  <div class="chat__column">
+                      <span class="chat__timestamp">YesterDay</span>
+                  </div>
+              </li>
+         </ui>
+         
+    </main>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__list-time">
+          <a href="friends.html" class="nav__list-link">
+            <i class="far fa-user"></i>
+          </a>
+        </li>
+        <li class="nav__list-time">
+          <a href="index.html" class="nav__list-link">
+            <i class="fas fa-comment"></i>
+          </a>
+        </li>
+        <li class="nav__list-time">
+          <a href="find.html" class="nav__list-link">
+            <i class="far fa-search"></i>
+          </a>
+        </li>
+        <li class="nav__list-time">
+          <a href="more.html" class="nav__list-link">
+            <i class="far fa-ellipsis-h"></i>
+          </a>
+        </li> 
+      </ul>
+    </nav>
   </body>
 </html>
