--- a/friends.html
+++ b/friends.html
@@ -36,6 +36,60 @@
         </span>
       </div>
     </header>
+    <main class="friends">
+      <header class="frined__header">
+        <dev class="friend__friend friend friend--lg">
+          <div class="friend__column">
+          <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
+          <dev class="friend__content">
+            <span class="friend__name">
+              KimSoungLyung
+            </span>
+            <span class="friend__status">
+              YOLO
+            </span>
+          </dev>
+        </div>
+        </dev>
+      </header>
+      <dev class="friends__plus">
+        <h5 class="friends__title">Plus friend</h5>
+        <dev class="friend__friend friend">
+          <div class="friend__colunm">
+          <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
+          <dev class="friend__content">
+            <span class="friend__name">
+              KimSoungLyung
+            </span>
+          </dev>
+        </dev>
+      </div>
+      </dev>
+      <ul class="friends__list">
+        <h5 class="friend__title">Friends 14</h5>
+        <li class="friend__friend friend friend--lg">
+        <div class="friend__colunm">
+        <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
+        <div class="friend__content">
+          <span class="friend__name">
+            KimSoungLyung
+          </span>
+          <span class="friend__status">
+            YOLO
+          </span>
+        </div>
+      </div>
+      <div class="friend__column">
+        <div class="friend__now-listending">
+          <span>
+          FTISLAND(nfso)
+        </span>
+        <i class="fas fa-play"></i>
+        </div>
+      </div>
+      </li>
+      </ul>
+    </main>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-time">
