--- a/find.html
+++ b/find.html
@@ -36,7 +36,65 @@
         </span>
       </div>
     </header>
-    <nac class="nav">
+    <main class="find">
+      <header class="find__header">
+        <ui class="find__header-list">
+          <li class="find__header-btn header-btn">
+            <span class="header-btn__icon">
+              <i class="fas fa-qrcode fa-2x"></i>
+            </span>
+            <span class="header-btn__title">
+              QRcode
+            </span>
+          </li>
+          <li class="find__header-btn header-btn">
+            <span class="header-btn__icon">
+              <i class="fas fa-user-plus fa-2x"></i>
+            </span>
+            <span class="header-btn__title">
+              Add by contacts
+            </span>
+          </li>
+          <li class="find__header-btn header-btn">
+            <span class="header-btn__icon">
+              <i class="fas fa-passport fa-2x"></i>
+            </span>
+            <span class="header-btn__title">
+              Add by ID
+            </span>
+          </li>
+          <li class="find__header-btn header-btn">
+            <span class="header-btn__icon">
+              <i class="far fa-envelope fa-2x"></i>
+            </span>
+            <span class="header-btn__title">
+              Invite
+            </span>
+          </li>
+        </ui>
+      </header>
+      <div class="find__recommentded">
+        <h5 class="find__title">
+          Recommended Friends
+        </h5>
+        <li class="find__friend friend friend--lg">
+          <div class="friend__colunm">
+            <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                KimSoungLyung
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__add-btn">
+              <i class="fas fa-user-plus"></i>
+            </div>
+          </div>
+        </li>
+      </div>
+    </main>
+    <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-time">
           <a href="friends.html" class="nav__list-link">
@@ -59,6 +117,6 @@
           </a>
         </li>
       </ul>
-    </nac>
+    </nav>
   </body>
 </html>
