--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>chats | Kakao Clone</title>
-    <script
+    <script>
       src="https://kit.fontawesome.com/7a2d37306e.js"
       crossorigin="anonymous"
-    ></script>
+    </script>
   </head>
   <body>
     <div class="status-bar">
@@ -43,7 +43,7 @@
          <ui class="chats__list">
               <li class="chats__chat__chat">
                   <div class="chat__column"></div>
-                  <img class="chat__avatar" src="images/me.jpg" />
+                  <img class="chat__avatar g-avatar" src="images/me.jpg" />
                   <chat class="contant">
                       <span class="chat__username">
                           kim
