--- a/friends.html
+++ b/friends.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>friends | Kakao Clone</title>
-    <script
+    <script>
       src="https://kit.fontawesome.com/7a2d37306e.js"
       crossorigin="anonymous"
-    ></script>
+    </script>
   </head>
   <body>
     <div class="status-bar">
