--- a/more.html
+++ b/more.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>more | Kakao Clone</title>
-    <script
-      src="https://kit.fontawesome.com/7a2d37306e.js"
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
-    ></script>
+    />
+    <title>more | Kakao Clone</title>
+    <!-- <script>
+      src = "https://kit.fontawesome.com/7a2d37306e.js";
+      crossorigin = "anonymous";
+    </script> -->
   </head>
   <body>
     <div class="status-bar">
@@ -25,7 +31,7 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <h1 class="header__title">more</h1>
+        <h1 class="header__title">More</h1>
       </div>
       <div class="header__header-column">
         <span class="header__icon">
@@ -43,7 +49,7 @@
       </div>
     </header>
     <main class="more">
-      <header class="header more__header">
+      <header class="more__header">
         <div class="friend__friend friend friend--lg">
           <div class="friend__colunm">
             <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
@@ -86,30 +92,30 @@
             </span>
           </li>
         </ul>
-        <section class="more__suggestions">
-          <h5 class="more__title">Suggestions</h5>
-          <ul class="more__suggestions-list">
-            <li class="more__suggestion suggestion">
-              <span class="suggestion__icon">
-                <i class="fas fa-quote-right fa-2x"></i>
-              </span>
-              <span class="suggestion__title">Kakao Story</span>
-            </li>
-            <li class="more__suggestion suggestion">
-              <span class="suggestion__icon">
-                <i class="fas fa-beer fa-2x"></i>
-              </span>
-              <span class="suggestion__title">Kakao Friends</span>
-            </li>
-            <li class="more__suggestion suggestion">
-              <span class="suggestion__icon">
-                <i class="fas fa-gamepad fa-2x"></i>
-              </span>
-              <span class="suggestion__title">Friends Gam</span>
-            </li>
-          </ul>
-        </section>
       </header>
+      <section class="more__suggestions">
+        <h5 class="more__title">Suggestions</h5>
+        <ul class="more__suggestions-list">
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-quote-right fa-2x"></i>
+            </span>
+            <span class="suggestion__title">Kakao Story</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-beer fa-2x"></i>
+            </span>
+            <span class="suggestion__title">Kakao Friends</span>
+          </li>
+          <li class="more__suggestion suggestion">
+            <span class="suggestion__icon">
+              <i class="fas fa-gamepad fa-2x"></i>
+            </span>
+            <span class="suggestion__title">Friends Gam</span>
+          </li>
+        </ul>
+      </section>
     </main>
     <nac class="nav">
       <ul class="nav__list">
