--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>chats | Kakao Clone</title>
-    <script>
-      src="https://kit.fontawesome.com/7a2d37306e.js"
-      crossorigin="anonymous"
-    </script>
+    <title>chats | Kakao Clone</title>  
+    
+    <script src="https://kit.fontawesome.com/7a2d37306e.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="status-bar">
@@ -42,17 +40,19 @@
     <main class="chats">
          <ui class="chats__list">
               <li class="chats__chat__chat">
+                <a href="chat.html">
                   <div class="chat__column"></div>
                   <img class="chat__avatar g-avatar" src="images/me.jpg" />
                   <chat class="contant">
                       <span class="chat__username">
                           kim
                       </sapn>
-                      <span class="chat__preview">goingHime</span>
+                      <span class="chat__preview">goingHome</span>
                   </chat>
                   <div class="chat__column">
                       <span class="chat__timestamp">YesterDay</span>
                   </div>
+                </a>
               </li>
          </ui>
          
