--- a/friends.html
+++ b/friends.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>friends | Kakao Clone</title>
-    <script>
-      src="https://kit.fontawesome.com/7a2d37306e.js"
-      crossorigin="anonymous"
-    </script>
+    <script src="https://kit.fontawesome.com/7a2d37306e.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="status-bar">
