--- a/more.html
+++ b/more.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
     <title>more | Kakao Clone</title>
-    <!-- <script>
-      src = "https://kit.fontawesome.com/7a2d37306e.js";
-      crossorigin = "anonymous";
-    </script> -->
+    <script
+      src="https://kit.fontawesome.com/7a2d37306e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="status-bar">
@@ -112,7 +106,6 @@
             <span class="suggestion__icon">
               <i class="fas fa-gamepad fa-2x"></i>
             </span>
-            <span class="suggestion__title">Friends Gam</span>
           </li>
         </ul>
       </section>
