--- a/settings.html
+++ b/settings.html
@@ -4,17 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <title>Setting | Kakao Clone</title>
-    <!-- <script>
-      src = "https://kit.fontawesome.com/7a2d37306e.js";
-      crossorigin = "anonymous";
-    </script> -->
+     <title>Setting | Kakao Clone</title>
+     <script src="https://kit.fontawesome.com/7a2d37306e.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="status-bar">
@@ -32,7 +23,7 @@
     <header class="header">
       <div class="header__header-column">
         <div class="header__back-btn">
-          <a href="more.html class="header__back-btn"">
+          <a href="more.html"header__back-btn"">
             <i class="fas fa-arrow-left fa-2x"></i>
           </a>
         </div>
@@ -47,7 +38,24 @@
     <main class="setttings">
       <section class="settings__sections">
       <ui class="settings__list">
-        <li class="settings__setting"><span class="settings__icon"></span><span class="settings__title">Privacy</span></li>
+        <li class="settings__setting">
+          <span class="settings__icon">
+            <i class="pas fa-lock"></i>
+          </span>
+          <span class="settings__title">Privacy</span>
+        </li>
+        <li class="settings__setting">
+          <span class="settings__icon">
+            <i class="far fa-bell"></i>
+          </span>
+          <span class="settings__title">Notification</span>
+        </li>
+        <li class="settings__setting">
+          <span class="settings__icon">
+            <i class="far fa-user"></i>
+          </span>
+          <span class="settings__title">Friends</span>
+        </li>
       </ui>
     </section>
     </main>
