--- a/chat.html
+++ b/chat.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
      <title>Chat | Kakao Clone</title>
      <script src="https://kit.fontawesome.com/7a2d37306e.js" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="css/styles.css" />     
   </head>
   <body>
     <div class="status-bar">
@@ -75,7 +76,7 @@
                 <i class="far fa-smile-wink"></i>
             </span>
             <span class="chat__write-icon">
-                i.fas.fa-micr
+                <i class="fas fa-microphone"></i>
             </span>
                 
             
