--- a/friends.html
+++ b/friends.html
@@ -7,6 +7,7 @@
 
     <title>friends | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/7a2d37306e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div class="status-bar">
