--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>chats | Kakao Clone</title>  
-    
     <script src="https://kit.fontawesome.com/7a2d37306e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    
   </head>
   <body>
     <div class="status-bar">
