--- a/more.html
+++ b/more.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/7a2d37306e.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
