--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
      <title>Setting | Kakao Clone</title>
      <script src="https://kit.fontawesome.com/7a2d37306e.js" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="css/styles.css" />
   </head>
+  
   <body>
     <div class="status-bar">
       <div class="status-bar__column">
