--- a/chat.html
+++ b/chat.html
@@ -33,9 +33,11 @@
       <div class="header__header-column">
         <span class="header__icon">
           <i class="fas fa-search"></i>
-          <div class="header__icon"></div>
+        </span>
+          <span class="header__icon">
           <i class="fas fa-bars"></i>
         </span>
+        
       </div>
     </header>
     <main class="chat">
