--- a/settings.html
+++ b/settings.html
@@ -26,7 +26,7 @@
       <div class="header__header-column">
         <div class="header__back-btn">
           <a href="more.html"header__back-btn"">
-            <i class="fas fa-arrow-left fa-2x"></i>
+            <i class="fas fa-arrow-left"></i>
           </a>
         </div>
         <h1 class="header__title">Settings</h1>
