--- a/more.html
+++ b/more.html
@@ -46,8 +46,8 @@
     <main class="more">
       <header class="more__header">
         <div class="friend__friend friend friend--lg">
-          <div class="friend__colunm">
-            <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
+          <div class="friend__column">
+            <img src="images/me.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 KimSoungLyung
