--- a/find.html
+++ b/find.html
@@ -79,8 +79,8 @@
           Recommended Friends
         </h5>
         <li class="find__friend friend friend--lg">
-          <div class="friend__colunm">
-            <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
+          <div class="friend__column">
+            <img src="images/me.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 KimSoungLyung
