--- a/friends.html
+++ b/friends.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>friends | Kakao Clone</title>
-    <script src="https://kit.fontawesome.com/7a2d37306e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <script
+      src="https://kit.fontawesome.com/7a2d37306e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -36,57 +39,57 @@
       </div>
     </header>
     <main class="friends">
-      <header class="frined__header">
-        <dev class="friend__friend friend friend--lg">
+      <header class="friends__header">
+        <div class="friends__friend friend">
           <div class="friend__column">
-          <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
-          <dev class="friend__content">
-            <span class="friend__name">
-              KimSoungLyung
-            </span>
-            <span class="friend__status">
-              YOLO
-            </span>
-          </dev>
+            <img src="images/me.jpg" class="g-avatar friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                KimSoungLyung
+              </span>
+              <span class="friend__status">
+                YOLO
+              </span>
+            </div>
+          </div>
         </div>
-        </dev>
       </header>
-      <dev class="friends__plus">
+      <div class="friends__plus">
         <h5 class="friends__title">Plus friend</h5>
-        <dev class="friend__friend friend">
-          <div class="friend__colunm">
-          <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
-          <dev class="friend__content">
-            <span class="friend__name">
-              KimSoungLyung
-            </span>
-          </dev>
-        </dev>
+        <div class="friends__friend friend">
+          <div class="friend__column">
+            <img src="images/me.jpg" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                Plus Friend
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
-      </dev>
       <ul class="friends__list">
         <h5 class="friend__title">Friends 14</h5>
         <li class="friend__friend friend friend--lg">
-        <div class="friend__colunm">
-        <img src="images/me.jpg" alt="" class="g-avatar freind__avatar" />
-        <div class="friend__content">
-          <span class="friend__name">
-            KimSoungLyung
-          </span>
-          <span class="friend__status">
-            YOLO
-          </span>
-        </div>
-      </div>
-      <div class="friend__column">
-        <div class="friend__now-listending">
-          <span>
-          FTISLAND(nfso)
-        </span>
-        <i class="fas fa-play"></i>
-        </div>
-      </div>
-      </li>
+          <div class="friend__column">
+            <img src="images/me.jpg" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                KimSoungLyung
+              </span>
+              <span class="friend__status">
+                YOLO
+              </span>
+            </div>
+          </div>
+          <div class="friend__column">
+            <div class="friend__now-listending">
+              <span>
+                FTISLAND(nfso)
+                <i class="fas fa-play"></i>
+              </span>
+            </div>
+          </div>
+        </li>
       </ul>
     </main>
     <nav class="nav">
