--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>chats | Kakao Clone</title>  
-    <script src="https://kit.fontawesome.com/7a2d37306e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css">
-    
+    <title>chats | Kakao Clone</title>
+    <script
+      src="https://kit.fontawesome.com/7a2d37306e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -39,24 +41,30 @@
       </div>
     </header>
     <main class="chats">
-         <ui class="chats__list">
-              <li class="chats__chat__chat">
-                <a href="chat.html">
-                  <div class="chat__column"></div>
-                  <img class="chat__avatar g-avatar" src="images/me.jpg" />
-                  <chat class="contant">
-                      <span class="chat__username">
-                          kim
-                      </sapn>
-                      <span class="chat__preview">goingHome</span>
-                  </chat>
-                  <div class="chat__column">
-                      <span class="chat__timestamp">YesterDay</span>
-                  </div>
-                </a>
-              </li>
-         </ui>
-         
+      <ui class="chats__list">
+        <li class="chats__chat__chat">
+          <a href="chat.html">
+            <div class="chats __chat friend friend--lg">
+              <div class="friend__column">
+                <img src="images/me.jpg" class="m-avatar friend__avatar" />
+                <div class="friend__content">
+                  <span class="friend__name">
+                    Lynn
+                  </span>
+                  <span class="friend__bottom-text">
+                    GoingHome
+                  </span>
+                </div>
+              </div>
+              <div class="friend__column">
+                <span class="chat__timestamp">
+                  March 8
+                </span>
+              </div>
+            </div>
+          </a>
+        </li>
+      </ui>
     </main>
     <nav class="nav">
       <ul class="nav__list">
@@ -67,6 +75,7 @@
         </li>
         <li class="nav__list-time">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="fas fa-comment"></i>
           </a>
         </li>
@@ -79,7 +88,7 @@
           <a href="more.html" class="nav__list-link">
             <i class="far fa-ellipsis-h"></i>
           </a>
-        </li> 
+        </li>
       </ul>
     </nav>
   </body>
