--- a/find.html
+++ b/find.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>find | Kakao Clone</title>
+    <title>Find | Kakao Clone</title>
     <script
       src="https://kit.fontawesome.com/7a2d37306e.js"
       crossorigin="anonymous"
@@ -26,7 +26,7 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <h1 class="header__title">find</h1>
+        <h1 class="header__title">Find</h1>
       </div>
       <div class="header__header-column">
         <span class="header__icon">
@@ -74,7 +74,7 @@
           </li>
         </ui>
       </header>
-      <div class="find__recommentded">
+      <ul class="find__recommended">
         <h5 class="find__title">
           Recommended Friends
         </h5>
@@ -93,7 +93,7 @@
             </div>
           </div>
         </li>
-      </div>
+      </ul>
     </main>
     <nav class="nav">
       <ul class="nav__list">
