--- a/more.html
+++ b/more.html
@@ -107,11 +107,12 @@
             <span class="suggestion__icon">
               <i class="fas fa-gamepad fa-2x"></i>
             </span>
+            <span class="suggestion__title">Friends Gem</span>
           </li>
         </ul>
       </section>
     </main>
-    <nac class="nav">
+    <nav class="nav">
       <ul class="nav__list">
         <li class="nav__list-time">
           <a href="friends.html" class="nav__list-link">
@@ -134,6 +135,6 @@
           </a>
         </li>
       </ul>
-    </nac>
+    </nav>
   </body>
 </html>
