--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         </li>
         <li class="nav__list-time">
           <a href="find.html" class="nav__list-link">
-            <i class="far fa-search"></i>
+            <i class="fas fa-search"></i>
           </a>
         </li>
         <li class="nav__list-time">
           <a href="more.html" class="nav__list-link">
-            <i class="far fa-ellipsis-h"></i>
+            <i class="fas fa-ellipsis-h"></i>
           </a>
         </li>
       </ul>
