--- a/settings.html
+++ b/settings.html
@@ -37,13 +37,13 @@
         </span>
       </div>
     </header>
-    <main class="setttings">
+    <main class="settings">
       <section class="settings__sections">
-      <ui class="settings__list">
+      <ul class="settings__list">
         <li class="settings__setting">
           <span class="settings__icon">
-            <i class="pas fa-lock"></i>
-          </span>
+          <i class="fas fa-lock"></i>
+          </span>       
           <span class="settings__title">Privacy</span>
         </li>
         <li class="settings__setting">
@@ -58,7 +58,7 @@
           </span>
           <span class="settings__title">Friends</span>
         </li>
-      </ui>
+      </ul>
     </section>
     </main>
   </body>
