--- a/chat.html
+++ b/chat.html
@@ -51,10 +51,10 @@
         Contrats I love!
     </div>
 </div>
-<span class="message__timestamp"></span>
+
 
 </li>
-<li class="incoming-message message">
+<li class="sent-message message">
     <span class="message__timestamp"></span>
     <div class="message__content">    
     <div class="message__bubble">
