--- a/chat.html
+++ b/chat.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="header__header-column">
         <div class="header__back-btn">
-          <a href="more.html"header__back-btn"">
+          <a href="index.html"header__back-btn"">
             <i class="fas fa-arrow-left fa-2x"></i>
           </a>
         </div>
@@ -46,10 +46,10 @@
 <li class="incoming-message message">
     <img src="images/me.jpg" class="g-avatar message__avatar">
 <div class="message__content">
-    <span class="message__author">Best Friend</span>
-    <div class="message__bubble">
-        Contrats I love!
-    </div>
+  <div class="message__bubble">
+    Contrats I love!
+  </div>
+  <span class="message__author">Best Friend</span>
 </div>
 
 
@@ -60,6 +60,27 @@
     <div class="message__bubble">
         Thank you
     </div>
+</div>
+<span class="message__timestamp"></span>
+
+</li>
+<li class="incoming-message message">
+  <img src="images/me.jpg" class="g-avatar message__avatar">
+<div class="message__content">
+<div class="message__bubble">
+  Contrats I love!
+</div>
+<span class="message__author">Best Friend</span>
+</div>
+
+
+</li>
+<li class="sent-message message">
+  <span class="message__timestamp"></span>
+  <div class="message__content">    
+  <div class="message__bubble">
+      Thank you
+  </div>
 </div>
 <span class="message__timestamp"></span>
 
