--- a/chat.html
+++ b/chat.html
@@ -35,8 +35,7 @@
         </span>
           <span class="header__icon">
           <i class="fas fa-bars"></i>
-        </span>
-        
+        </span>     
       </div>
     </header>
   </div>
@@ -44,7 +43,7 @@
         <ul class="chat__messages">
 <span class="chat__timestamp">Friday, January 11.2019</span>
 <li class="incoming-message message">
-    <img src="images/me.jpg" class="g-avatar message__avatar">
+    <img src="images/me.jpg" class="g-avatar message__avatar" />
 <div class="message__content">
   <span class="message__bubble">
     Contrats I love!
@@ -67,8 +66,6 @@
 </span>
 <span class="message__author">Best Friend</span>
 </div>
-
-
 </li>
 <li class="sent-message message">
    <div class="message__content">    
@@ -84,22 +81,21 @@
       type="text" 
       class="chat__write" 
       placeholder="Send message"
-      class="chat__write-input"/>  
+      class="chat__write-input"
+      />  
+
       <div class="chat__icon-left chat__icon">
             <i class="far fa-plus-square"></i>
         </div>
-        <div class="chat__icon-right">
+
+        <div class="chat__icon-right chat__icon">
           <span class="chat__write-icon">
           <i class="far fa-smile-wink"></i>
         </span>
             <span class="chat__write-icon">
                 <i class="fas fa-microphone"></i>
             </span>
-
         </div>
         </div>
-    </div>
   </body>
 </html>
-
-
