--- a/chat.html
+++ b/chat.html
@@ -97,5 +97,8 @@
             </span>
         </div>
         </div>
+        <div class="bigScreen">
+          <span class="bigScreen__text">Please make your Screen small</span>
+        </div>
   </body>
 </html>
