--- a/index.html
+++ b/index.html
@@ -91,5 +91,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your Screen small</span>
+    </div>
   </body>
 </html>
